﻿Subtitle Edit Changelog

3.5.4 (xth August 2017) BETA
* NEW:
   * New subtitle format JacoSub - thx ivandrofly
   * New subtitle format Lamda Cap (basic support) - thx Chie
   * New shortcuts for frame forward/back with playing
* IMPROVED:
   * Updated Russian translation - thx Elheym
   * Updated Brazilian translation - thx Igor
   * Updated Basque translation - thx Xabier 
   * Improved language auto detect
   * Added semicolon as possible shortcut key - thx Allan
   * Added 60 fps to export settings for several formats
   * Google translate can now use google.cn (for Chinese ppl)
   * Export margins can now be percentage or pixels
   * Added more subtitle formats to command line + batch convert
   * If input file is unknown + plain text, "Import plain text" will open
* FIXED:
   * Fixed missing space in format WebVTT
   * Fixed support for combined Arabic characters in PAC - thx Zehelein
   * mpv frame stepping now updates position - thx Flitskikker
   * Fixed issue with TTML and namespace - thx PannenkoekenNL
   * Fixed possible crash in "Statistics" - thx Masih
   * Fix for Arabic spell check word split
   * Fix for reverse RTL start/end
   * Add to name to language list is now culture neutral
   * Maintain cursor position during unbreak/break
   * Fix for "disable auto open" of video files - thx Barneyk
   * Fix for rare large font issue - thx Camille
   * Fix for PAC language auto-detect - thx SirEllert


3.5.3 (12th May 2017)
* NEW:
   * New Netflix quality checker - thx askolesov/pavel-belenko
   * Added optional list view column "Actor" for ASS/SSA - thx william
   * Added new subtitle format - thx Merwyn
   * Added new subtitle format - thx Philippe
   * Added new subtitle fomrat - thx Eddy
* IMPROVED:
   * Updated Chinese translation - thx Leon
   * Updated French translation - thx JM GBT
   * Updated Russian translation - thx Elheym
   * Updated Finnish translation - thx Teijo S.
   * Updated Polish translation - thx admas