@@ -6,13 +6,14 @@ using System.Collections.Generic;
 using System.Drawing;
 using System.Drawing.Drawing2D;
 using System.Drawing.Text;
+using System.Globalization;
 using System.IO;
 using System.Text;
 using System.Windows.Forms;
 
 namespace Nikse.SubtitleEdit.Forms.Styles
 {
-    public partial class SubStationAlphaStyles : StylesForm
+    public sealed partial class SubStationAlphaStyles : StylesForm
     {
         private string _header;
         private bool _doUpdate;
@@ -99,6 +100,10 @@ namespace Nikse.SubtitleEdit.Forms.Styles
                 buttonBackColor.Text = l.Back;
                 listViewStyles.Columns[5].Text = l.Back;
                 checkBoxFontUnderline.Visible = false;
+                numericUpDownOutline.Increment = 1;
+                numericUpDownOutline.DecimalPlaces = 1;
+                numericUpDownShadowWidth.Increment = 1;
+                numericUpDownShadowWidth.DecimalPlaces = 1;
             }
 
             buttonOK.Text = Configuration.Settings.Language.General.Ok;
@@ -135,8 +140,7 @@ namespace Nikse.SubtitleEdit.Forms.Styles
             if (listViewStyles.SelectedItems.Count != 1)
                 return;
 
-            if (pictureBoxPreview.Image != null)
-                pictureBoxPreview.Image.Dispose();
+            pictureBoxPreview.Image?.Dispose();
             var bmp = new Bitmap(pictureBoxPreview.Width, pictureBoxPreview.Height);
 
             using (Graphics g = Graphics.FromImage(bmp))
@@ -184,7 +188,7 @@ namespace Nikse.SubtitleEdit.Forms.Styles
                 var measuredWidth = TextDraw.MeasureTextWidth(font, sb.ToString(), checkBoxFontBold.Checked) + 1;
                 var measuredHeight = TextDraw.MeasureTextHeight(font, sb.ToString(), checkBoxFontBold.Checked) + 1;
 
-                float left = 5;
+                float left;
                 if (radioButtonTopLeft.Checked || radioButtonMiddleLeft.Checked || radioButtonBottomLeft.Checked)
                     left = (float)numericUpDownMarginLeft.Value;
                 else if (radioButtonTopRight.Checked || radioButtonMiddleRight.Checked || radioButtonBottomRight.Checked)
@@ -192,7 +196,7 @@ namespace Nikse.SubtitleEdit.Forms.Styles
                 else
                     left = ((float)(bmp.Width - measuredWidth * 0.8 + 15) / 2);
 
-                float top = 2;
+                float top;
                 if (radioButtonTopLeft.Checked || radioButtonTopCenter.Checked || radioButtonTopRight.Checked)
                     top = (float)numericUpDownMarginVertical.Value;
                 else if (radioButtonMiddleLeft.Checked || radioButtonMiddleCenter.Checked || radioButtonMiddleRight.Checked)
@@ -890,9 +894,9 @@ namespace Nikse.SubtitleEdit.Forms.Styles
         {
             if (listViewStyles.SelectedItems.Count == 1 && _doUpdate)
             {
-                listViewStyles.SelectedItems[0].SubItems[2].Text = numericUpDownFontSize.Value.ToString();
+                listViewStyles.SelectedItems[0].SubItems[2].Text = numericUpDownFontSize.Value.ToString(CultureInfo.InvariantCulture);
                 string name = listViewStyles.SelectedItems[0].Text;
-                SetSsaStyle(name, "fontsize", numericUpDownFontSize.Value.ToString());
+                SetSsaStyle(name, "fontsize", numericUpDownFontSize.Value.ToString(CultureInfo.InvariantCulture));
                 GeneratePreview();
             }
         }
@@ -1049,7 +1053,7 @@ namespace Nikse.SubtitleEdit.Forms.Styles
             if (listViewStyles.SelectedItems.Count == 1 && _doUpdate)
             {
                 string name = listViewStyles.SelectedItems[0].Text;
-                SetSsaStyle(name, "marginl", numericUpDownMarginLeft.Value.ToString());
+                SetSsaStyle(name, "marginl", numericUpDownMarginLeft.Value.ToString(CultureInfo.InvariantCulture));
                 GeneratePreview();
             }
         }
@@ -1059,7 +1063,7 @@ namespace Nikse.SubtitleEdit.Forms.Styles
             if (listViewStyles.SelectedItems.Count == 1 && _doUpdate)
             {
                 string name = listViewStyles.SelectedItems[0].Text;
-                SetSsaStyle(name, "marginr", numericUpDownMarginRight.Value.ToString());
+                SetSsaStyle(name, "marginr", numericUpDownMarginRight.Value.ToString(CultureInfo.InvariantCulture));
                 GeneratePreview();
             }
         }
@@ -1069,7 +1073,7 @@ namespace Nikse.SubtitleEdit.Forms.Styles
             if (listViewStyles.SelectedItems.Count == 1 && _doUpdate)
             {
                 string name = listViewStyles.SelectedItems[0].Text;
-                SetSsaStyle(name, "marginv", numericUpDownMarginVertical.Value.ToString());
+                SetSsaStyle(name, "marginv", numericUpDownMarginVertical.Value.ToString(CultureInfo.InvariantCulture));
                 GeneratePreview();
             }
         }
@@ -1085,7 +1089,7 @@ namespace Nikse.SubtitleEdit.Forms.Styles
             if (listViewStyles.SelectedItems.Count == 1 && _doUpdate)
             {
                 string name = listViewStyles.SelectedItems[0].Text;
-                SetSsaStyle(name, "outline", numericUpDownOutline.Value.ToString());
+                SetSsaStyle(name, "outline", numericUpDownOutline.Value.ToString(CultureInfo.InvariantCulture));
                 GeneratePreview();
             }
         }
@@ -1095,7 +1099,7 @@ namespace Nikse.SubtitleEdit.Forms.Styles
             if (listViewStyles.SelectedItems.Count == 1 && _doUpdate)
             {
                 string name = listViewStyles.SelectedItems[0].Text;
-                SetSsaStyle(name, "shadow", numericUpDownShadowWidth.Value.ToString());
+                SetSsaStyle(name, "shadow", numericUpDownShadowWidth.Value.ToString(CultureInfo.InvariantCulture));
                 GeneratePreview();
             }
         }
@@ -1107,7 +1111,7 @@ namespace Nikse.SubtitleEdit.Forms.Styles
             {
                 numericUpDownShadowWidth.Value = 2;
                 string name = listViewStyles.SelectedItems[0].Text;
-                SetSsaStyle(name, "outline", numericUpDownOutline.Value.ToString());
+                SetSsaStyle(name, "outline", numericUpDownOutline.Value.ToString(CultureInfo.InvariantCulture));
                 SetSsaStyle(name, "borderstyle", "1");
                 GeneratePreview();
 
@@ -1124,7 +1128,7 @@ namespace Nikse.SubtitleEdit.Forms.Styles
             {
                 numericUpDownShadowWidth.Value = 0;
                 string name = listViewStyles.SelectedItems[0].Text;
-                SetSsaStyle(name, "outline", numericUpDownOutline.Value.ToString());
+                SetSsaStyle(name, "outline", numericUpDownOutline.Value.ToString(CultureInfo.InvariantCulture));
                 SetSsaStyle(name, "borderstyle", "3");
                 GeneratePreview();
 
@@ -1195,7 +1199,7 @@ namespace Nikse.SubtitleEdit.Forms.Styles
 
             if (openFileDialogImport.ShowDialog(this) == DialogResult.OK)
             {
-                Encoding encoding = null;
+                Encoding encoding;
                 var s = new Subtitle();
                 var format = s.LoadSubtitle(openFileDialogImport.FileName, out encoding, null);
                 if (format != null && format.HasStyleSupport)
@@ -1222,9 +1226,8 @@ namespace Nikse.SubtitleEdit.Forms.Styles
 
                             _doUpdate = false;
                             AddStyle(listViewStyles, style, Subtitle, _isSubStationAlpha);
-                            SsaStyle oldStyle = GetSsaStyle(listViewStyles.Items[0].Text);
                             _header = _header.Trim();
-                            if (_header.EndsWith("[Events]"))
+                            if (_header.EndsWith("[Events]", StringComparison.Ordinal))
                             {
                                 _header = _header.Substring(0, _header.Length - "[Events]".Length).Trim();
                                 _header += Environment.NewLine + style.RawLine;
